# Protein-Science-AI

./: .gitignore  .pre-commit-config.yaml  EXECUTIVE_SUMMARY.md  PROJECT_COMPLETE.md  Protein_Science_Executive_Summary.docx  Protein_Science_Technical_Report.docx  README.md  TECHNICAL_REPORT.md  create_executive_summary_word.py  create_word_report.py  enhanced_protein_app.py  full_analysis_app.py  pyproject.toml  requirements.txt  setup.cfg  test_enhanced_features.py  test_installation.py
.github/: copilot-instructions.md
data/: __init__.py
examples/: getting_started.md  protein_science_demo.ipynb
protein_science/: __init__.py  cli.py
protein_science/agents/: __init__.py  protein_agent.py
protein_science/collaboration/: __init__.py  coordinator.py
protein_science/foundation/: __init__.py  function_predictor.py  protein_models.py  structure_predictor.py
protein_science/interface/: __init__.py  api.py  streamlit_app.py
tests/: test_protein_science.py
