[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-science-ai"
version = "0.1.0"
description = "Agentic AI system for protein science research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Protein Science AI Team"},
]
keywords = ["protein", "ai", "agent", "science", "biology", "drug-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "biopython>=1.81",
    "mdanalysis>=2.5.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "fair-esm>=2.0.0",
    "fastapi>=0.100.0",
    "streamlit>=1.25.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
simulation = [
    "openmm>=8.0.0",
    "mdtraj>=1.9.0",
    "pymol-open-source>=2.5.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "gradio>=3.40.0",
]

[project.urls]
Homepage = "https://github.com/protein-science-ai/protein-science"
Repository = "https://github.com/protein-science-ai/protein-science"
Documentation = "https://protein-science-ai.readthedocs.io"

[project.scripts]
protein-ai = "protein_science.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["protein_science*"]

[tool.setuptools.package-data]
protein_science = ["data/*", "models/*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"